# miri

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  OVERVIEW.md  PLAN.md  PRINCIPLES.md  QUALITY.md  README.md  SPEC.md  VISION.md  clippy.toml  commit_message.txt  get_size.rs  plan.md  pr_body.txt  pr_description.md  test_tempfile.rs
.agent/rules/: quality.md
.claude/agents/: lead-compiler-architect.md  lead-cto.md  lead-gpu-engineer.md  lead-miri-engineer.md  lead-qa-engineer.md  lead-rust-engineer.md  lead-security-engineer.md  lead-software-architect.md  miri-explorer.md  miri-reviewer.md  miri-test-runner.md
.gemini/skills/: miri-explorer  miri-qa  miri-reviewer  miri-task  miri-test-runner
.github/workflows/: ci.yml  gpu-hardware.yml
.jules/: bolt.md  sentinel.md
.serena/: project.yml
assets/web/: miri-gpu.js  miri_gpu_runtime.js  miri_gpu_runtime.test.html
examples/: README.md
examples/gpu/: box_blur.mi  buffer_reuse.mi  game_of_life.mi  linear_regression.mi  mandelbrot.mi  matmul.mi  neural_net.mi  neural_net_mlp.mi  (+3 more)
miri-extension/: README.md  language-configuration.json  miri-language-0.1.0.vsix  package-lock.json  package.json
src/: ast.rs  ast_factory.rs  cli.rs  compiler_error.rs  lexer.rs  lib.rs  main.rs  parser.rs  pipeline.rs  repl.rs  runtime_fns.rs  syntax_error.rs  type_checker.rs  type_error.rs  version.rs
src/runtime/gpu/: Cargo.toml
src/runtime/gpu/src/: buffer.rs  compute.rs  context.rs  device_table.rs  launch.rs  lib.rs  telemetry.rs
src/runtime/gpu/tests/: buffer_tests.rs  compute_tests.rs  context_tests.rs  device_table_tests.rs  launch_tests.rs  telemetry_tests.rs
tests/: ast_builder.rs  cli_tests.rs  lexer_tests.rs  mod.rs  parser_tests.rs  pipeline.rs  runtime_fns.rs  utils.rs
(+928 files in other folders)
