[package]
name = "miri"
version = "0.1.0-alpha.1"
description = "A modern, GPU-first, statically-typed programming language"
repository = "https://github.com/vshynkarenko/miri"
edition = "2021"

[features]
default = ["cranelift"]
cranelift = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-object",
    "dep:cranelift-native",
    "dep:target-lexicon",
]
llvm = ["dep:inkwell"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
logos = "0.16.0"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"

# Cranelift backend (default)
cranelift-codegen = { version = "0.127.1", optional = true }
cranelift-frontend = { version = "0.127.1", optional = true }
cranelift-module = { version = "0.127.1", optional = true }
cranelift-object = { version = "0.127.1", optional = true }
cranelift-native = { version = "0.127.1", optional = true }
target-lexicon = { version = "0.13", optional = true }

# LLVM backend (optional, requires LLVM installation)
inkwell = { version = "0.7.1", features = ["llvm21-1"], optional = true }

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
regex = "1.12.2"
tempfile = "3.24.0"

